--- a/models/page.ini
+++ b/models/page.ini
@@ -6,6 +6,10 @@ label = {{ this.title }}
 label = Title
 type = string
 
+[fields.description]
+label = description
+type = markdown
+
 [fields.body]
 label = Body
 type = markdown
